# OpenJSON

./: CMakeLists.txt  LICENSE
include/: AllowedToCreateNew.h  Common.h  CopyAbleMoveAble.h  Deserializer.h  Getter.h  Json.h  JsonParser.h  JsonSerializable.h  LinkedStack.h  NonCopyMoveAble.h  NonCopyNonMoveAble.h  NotAllowedToCreateNew.h  Object.h  RegisterGetterSetter.h  Serializable.h  Serializer.h  Setter.h  Singleton.h  Static.h  TypeTraits.h  TypeTraitsBool.h  TypeTraitsInt64.h  TypeTraitsInt8.h  TypeTraitsPrimitive.h  TypeTraitsUint16.h  TypeTraitsUint32.h  TypeTraitsUint64.h  TypeTraitsUint8.h  TypeTraitsVector.h  library.h
include/base_types/: AllowedToCreateNew.h  CopyAbleMoveAble.h  NonCopyMoveAble.h  NonCopyNonMoveAble.h  NotAllowedToCreateNew.h  Serializable.h  Singleton.h  Static.h
include/core/: AbstractJsonSerializable.h  Common.h  Json.h  JsonDeserializer.h  JsonSerializer.h  LinkedStack.h
include/type_traits/: TypeTrailsCommon.h  TypeTraitsChar.h  TypeTraitsClass.h  TypeTraitsDecimal.h  TypeTraitsDouble.h  TypeTraitsEnum.h  TypeTraitsFlot.h  TypeTraitsInt16.h  TypeTraitsInt32.h  TypeTraitsInt64.h  TypeTraitsInteger.h  TypeTraitsLongDouble.h  TypeTraitsString.h  TypeTraitsUint32.h  TypeTraitsUint64.h  TypeTraitsVector.h
src/: CopyAbleMoveAble.cpp  Deserializer.cpp  Getter.cpp  Json.cpp  JsonDeserializer.cpp  JsonParser.cpp  JsonSerializable.cpp  JsonSerializer.cpp  LinkedStack.cpp  Serializable.cpp  Serializer.cpp  Setter.cpp  Singleton.cpp
