cmake_minimum_required(VERSION 3.26)
project(OpenJSON)

set(CMAKE_CXX_STANDARD 17)

add_library(OpenJSON
        include/Getter.h
        include/Setter.h
        include/JsonParser.h
        src/JsonParser.cpp
        src/LinkedStack.cpp
        include/LinkedStack.h
        include/Common.h
        include/Object.h
        src/Singleton.cpp
        include/Singleton.h
        include/TypeTraits.h
        include/type_traits/TypeTraitsChar.h
        include/type_traits/TypeTraitsInt8.h
        include/type_traits/TypeTrailsCommon.h
        include/type_traits/TypeTraitsUint8.h
        include/type_traits/TypeTraitsInt16.h
        include/type_traits/TypeTraitsUint16.h
        include/type_traits/TypeTraitsInt32.h
        include/type_traits/TypeTraitsUint32.h
        include/type_traits/TypeTraitsInt64.h
        include/type_traits/TypeTraitsUint64.h
        include/type_traits/TypeTraitsFlot.h
        include/type_traits/TypeTraitsDouble.h
        include/type_traits/TypeTraitsLongDouble.h
        include/type_traits/TypeTraitsBool.h
        include/type_traits/TypeTraitsString.h
        include/type_traits/TypeTraitsVector.h
        include/type_traits/TypeTraitsEnum.h
        include/type_traits/TypeTraitsClass.h
        include/type_traits/TypeTraitsPrimitive.h
        include/type_traits/TypeTraitsDecimal.h
        include/type_traits/TypeTraitsInteger.h
        src/Json.cpp
        include/Json.h
        include/AllowedToCreateNew.h
        include/NonCopyNonMoveAble.h
        include/CopyAbleMoveAble.h
        include/NonCopyMoveAble.h
        include/Static.h
        include/Serializable.h
        src/CopyAbleMoveAble.cpp
        src/Serializable.cpp
)
